# QuantumVerse-Simulator

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  .gitmodules  .kilocodemodes  .mull.yml  AGENTS.md  BUILD_AND_TEST_TASK2_3.md  BUILD_REPORT.md  CI_CD_ERROR_ANALYSIS.md  CLEAN_STATE_REPORT.md  CMakeLists.txt  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  DEEP_VERIFICATION_REPORT.md  DEVELOPMENT_LIFECYCLE.md  DEVELOPMENT_WORKFLOW.md  DIAGNOSTIC_SYSTEM_SUMMARY.md  Dockerfile  Doxyfile  ERROR_LOG.md  FINAL_COMPLETION_CONTEXT.md  FINAL_PROJECT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIGHTGBM_PIPELINE_SUMMARY.md  MIGRATION_SUMMARY.md  PHASE1_COMPLETE_SUMMARY.md  PHASE1_IMPLEMENTATION_REPORT.md  PHASE1_REMAINING_TASKS_COMPLETE.md  PHASE2_COMPLETE_SUMMARY.md  PLAN2_IMPLEMENTATION_MAPPING.md  PLAN4_IMPLEMENTATION_MAPPING.md  PLAN6_IMPLEMENTATION_MAPPING.md  PLAN7_PROGRESS_REPORT.md  PROJECT_COMPLETION_REPORT.md  QuantumVerse.nsi  README.md  (+71 more)
.github/: codeql-config.yml
.github/workflows/: advanced-error-discovery.yml  ai-review.yml  autonomous-discovery.yml  build-and-test.yml  certify.yml  chaos-test.yml  ci-cd.yml  ci.yml  cross-platform-test.yml  diagnostic-suite.yml  error-detection-reporting.yml  formal-verification.yml  fuzz-testing.yml  mutation-testing.yml  nightly-baseline-update.yml  nightly-deep-scan.yml  nightly-pipeline.yml  nightly.yml  ninja-build.yml  pr-diagnostics.yml  release.yml  sanitization-pipeline.yml  security-audit.yml  static-analysis.yml  test.yml  windows-validation.yml
.kilocode/: mcp.json  system-prompt-physics-simulation-specialist  workflow_config.json
.kilocode/mode/: test-engineer.yaml
.kilocode/plans/: EXECUTION_TRACKING.md  GUI Upgrade Plan.txt  GUI_Upgrade_Plan.md  INTEGRATION_PROGRESS_REPORT.md  QuantumVerse_Verification_Report.md  The UI layout remains broken despite ear.md  master-plan.md  plan10.md  plan2.md  plan3.md  plan5.md  plan6.md  plan7.md  plan8.md  plan9.md
.kilocode/rules/: rules.md  test-engineer-checklist.md  test-engineer-tdd.md
.kilocode/workflows/: Complete Global Integration Plan.md  GUI_Implementation_Plan.md  QuantumVerse Upgrade.md  QuantumVerse_Project_Plan.md  Solar_System_Physics.md  Solar_System_README.md  Unified Workflow.md  ccvv.txt  create-physics-module.md  plan.md  train-neural-ode.md
chaos/: experiment.json
data/knowledge/: quantum_cosmology.json
docs/: 4D_VIEWPORT_GUIDE.md  API_Documentation.md  DEVELOPMENT_STATUS.md  DIAGNOSTIC_SYSTEM.md  ERROR_DETECTION_REPORTING.md  FULL_API_REFERENCE.md  GUI_UPGRADE_IMPLEMENTATION.md  INVARIANTS.md  Integration Plan.md  NASA_ACCEPTANCE_CHECKLIST.md  PHASE0_IMPLEMENTATION_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE6_7_IMPLEMENTATION.md  QUANTUMVERSE_IMGUi_USER_GUIDE.md  StringCosmology.md  TECHNICAL_DOCUMENTATION_REPORT.md  TEST_STATUS_RAW.txt  UI4D_ImGui_Documentation.md  UI_Documentation.md  UI_LAYOUT.md  VALIDATION_PLAN.md  WINDOWS_DEPLOYMENT.md  error-discovery-dashboard.md  error-discovery-readme.md  performance_report.md
docs/developer/: guide.md
docs/user_manual/: README.md
docs/validation/: report.md
examples/: example_black_hole.cpp  example_differentiable_physics.cpp  example_discovery.cpp  example_solar_system.cpp  example_spacetime_curvature.cpp
info/: Complex_spacetime.md  Curved_spacetime.md  Gravitational_singularity.md  Spacetime.md  Spacetime_topology.md  Three-dimensional_space.md  Time_geography.md
models/curvature_flow/: curvature_flow.onnx.data  metadata.json  metadata.yaml  normalization_stats.npz  training_history.npz
models/curvature_flow_pilot/: metadata.yaml  normalization_stats.npz  training_history.npz
models/curvature_pilot/: metadata.yaml  normalization_stats.npz  training_history.npz
models/curvature_pilot2/: training_history.npz
models/geodesic_ode/: geodesic_ode.onnx.data  hparams.json  metadata.json  normalization.json
plans/: 4d_dashboard_integration_plan.md  Complete Global Integration Plan.md  Development Plan for UI4D_ImGui.md  EXECUTION_PLAN.md  GUI Development Plan.md  GUI_Physics_Integration_Plan.md  GUI_Upgrade_Plan.md  PHASE2_AI_ACCELERATION_PLAN.md  PHASE3_PLAN.md  VULKAN_BACKEND_DESIGN.md  new 1.txt  plan.md  plan1.md  plan10.md  plan2.md  plan4.md  plan9.md
python/: bayesian_evidence.py  benchmark_gpu.py  checkpoint_inspect.py  datagen.py  do_export.py  export_best.py  export_dynamic_batch.py  export_flow_onnx.py  export_from_checkpoint.py  export_model.py  export_model_fp16.py  export_onnx.py  gen_rl_cpp.py  generate_curvature_dataset.py  make_dynamic.py  requirements_lightgbm.txt  symbolic_regression.py  train.py  train_curvature_flow.py  train_curvature_flow_fixed.py  train_lightgbm_discovery.py  train_retrain.py  train_tiny.py  write_rl_header.py
scripts/: analyze_traces.py  check_coverage.py  check_performance.py  diagnose_all.py  golden_master_test.py  validate_shaders.ps1  verify_symbolic.py
src/: ToastNotification.qml  main.qml  main_qml.cpp  qmlcamcontroller.cpp  qmlcamcontroller.h  qmldir  qmlglviewport.cpp  qmlglviewport.h  resources.qrc  scenegraphmodel.cpp  scenegraphmodel.h
tests/: test_autodiff_validation.cpp  test_black_hole_jet_anomaly.cpp  test_boson_star_collision.cpp  test_cdt.cpp  test_discovery_panel_manager.cpp  test_exact_solutions.cpp  test_exoplanetary_ttv.cpp  test_findings_model.cpp  test_findings_model_filtering.cpp  test_fine_structure_drift.cpp  test_frame_dragging.cpp  test_galactic_rotation_curve.cpp  test_galactic_tidal_stream.cpp  test_geodesic.cpp  test_gl_check.cpp  test_gr_validation.cpp  test_gravitational_redshift.cpp  test_light_deflection.cpp  test_matrix4x4.cpp  test_mercury_precession.cpp  test_multimessenger_ui.cpp  test_neutron_glitch.cpp  test_performance_gate.cpp  test_performance_regression.cpp  test_primordial_lithium.cpp  test_quantum_gravity_consistency.cpp  test_recombination_constant_variation.cpp  test_singularity_handler.cpp  test_spacetime.cpp  test_spin_foam.cpp  test_ultralight_dm_wave.cpp  test_vector4d.cpp
tools/: theory_discovery_runner.cpp
(+299 files in other folders)
